--- a/index.html
+++ b/index.html
@@ -37,7 +37,19 @@
         
         <footer>
 
-            
+            <div id="chatbar" class="input-group mb-3">
+                <input
+                    type="text"
+                    id="my-message"
+                    class="form-control"
+                    placeholder="Type a message...">
+                <div class="input-group-append">
+                    <button
+                        class="btn btn-outline-primary"
+                        id="send-button"
+                        type="button">Send</button>
+                </div>
+            </div>
 
         </footer>
         <!-- Our own Scripts -->
